section inline and adding pic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To <br> <span class="name_highlight">Jamiul Kawsar</span> Portfolio</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To <br> <span class="name_highlight">Jamiul Kawsar</span> Portfolio</h1>
+            <h3>Web developer & Programmer</h3>
+            <p>I am a software engineer. And i also a self-learner and quick-learner. I also a problem solver.I will provide you a best work, if you hired me.</p>
+        </div>
+        <div class="half-width">
+            <img src="images/jamiul.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
