bkgrd and button design

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To <br> <span class="name_highlight">Jamiul Kawsar</span> Portfolio</h1>
             <h3>Web developer & Programmer</h3>
             <p>I am a software engineer. And i also a self-learner and quick-learner. I also a problem solver.I will provide you a best work, if you hired me.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jamiul-kawsar-4337a2197/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/jamiul.png" alt="">
