next two section

--- a/index.html
+++ b/index.html
@@ -12,13 +12,37 @@
 <body>
     <section class="top-banner">
         <div class="half-width">
-            <h1>Welcome To <br> <span class="name_highlight">Jamiul Kawsar</span> Portfolio</h1>
+            <h1>Welcome To <br> <span class="red_highlight">Jamiul Kawsar</span> Portfolio</h1>
             <h3>Web developer & Programmer</h3>
             <p>I am a software engineer. And i also a self-learner and quick-learner. I also a problem solver.I will provide you a best work, if you hired me.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jamiul-kawsar-4337a2197/">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/jamiul.png" alt="">
+            <img src="images/Jamiul.jpg" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/IMG_20221215_134325.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Sweet Dream</h2>
+            <h3>Become a programmer and a web developer.</h3>
+            <p>I learned HTML and CSS, C/C++ programming language. And I also gain knowledge of the core courses of computer programming. I practice web Programming regular.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100009328863414&mibextid=ZbWKwL">FACEBOOK</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="red_highlight">2023 - Present | Pro level web developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I want beyond with most popular Javascript framework called vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="junior-level" class="half-width single-experience">
+            <h2>Junior Web Developer</h2>
+            <h3 class="red_highlight">2022 - 2023 | Learner level web developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I want beyond with most popular Javascript framework called vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>  
         </div>
     </section>
 </body>
